--- a/scss/style.scss
+++ b/scss/style.scss
@@ -21,3 +21,7 @@
 @import "item-main-block.scss";
 @import "gallery.scss";
 @import "main-price.scss";
+@import "filters.scss";
+@import "products.scss";
+
+
